--- a/CSS FOLDER/header.css
+++ b/CSS FOLDER/header.css
@@ -167,4 +167,17 @@
     border: 0.001px solid #333;
 }
 
+#cartNumber, #cartNumber:hover
+{
+    position: absolute;
+    top: -9px;
+    left: 14px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 0 5px;
+    font-size: 13px;
+    font-weight: bold;
+}
+
 
