added Utensils Content including HTML and images

--- a/CSS FOLDER/footer.css
+++ b/CSS FOLDER/footer.css
@@ -177,7 +177,7 @@ ul li
 
 .subscribe button
 {
-    background-color: #8b6b2e;
+    background-color: rgba(240, 198, 81, 0.767);
     border-radius: 3px;
     padding: 3px;
 }
