--- a/CSS FOLDER/header.css
+++ b/CSS FOLDER/header.css
@@ -165,6 +165,7 @@
     transition: all 0.3s ease;
     box-shadow: -3px 3px 4px rgba(0, 0, 0, .2);
     border: 0.001px solid #333;
+    border-radius: 5px;
 }
 
 #cartNumber, #cartNumber:hover
