--- a/CSS FOLDER/signin.css
+++ b/CSS FOLDER/signin.css
@@ -1,438 +1,4 @@
 
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-
-/*BACK TO TOP*/
-.backtotop
-{
-    position: fixed;
-    right: 5px;
-    bottom: 250px;
-    width: 40px;
-    text-align: center;
-    background-color: rgba(128, 128, 128, 0.336);
-    font-size: 13px;
-    border-radius: 7px;
-    padding: 5px;
-}
-
-.backtotop:hover
-{
-    color:#9c6b0f;
-    cursor: pointer;
-}
-
-.backtotop a
-{
-    text-decoration: none;
-    color: #0e0d0d;
-}
-
-.backtotop a:hover
-{
-    color:#9c6b0f;
-}
-
-body
-{
-    background-color: whitesmoke;
-    min-height: 100vh;
-    font-family: 'Nunito', sans-serif;
-}
-
-
-/*HEADER*/
-    /*-logo*/
-
-#mainHeader
-{
-    /*border-bottom: 2px solid rgb(90, 84, 84);*/
-    position:relative;
-    z-index: 2;
-    background: rgba(255, 255, 255, 0.65);
-    backdrop-filter: blur(1px);
-}
-.imgLogo
-{
-    width: 250px;
-    height: auto;
-    margin: 10px;
-    background: transparent;
-    mix-blend-mode: multiply;
-    opacity: 0.8;
-    filter: drop-shadow(0 2px 6px rgba(0,0,0,0.25));
-    padding: 10px;
-}
-
-.imgLogo:hover
-{
-    transform: scale(101%);
-    cursor: pointer;
-    transition: all 0.2s ease;
-    box-shadow: -3px 3px 4px rgba(0, 0, 0, .2);
-    border-radius: 50%;
-    padding: 10px;
-}
-
-    /*-content*/
-#headerContent
-{
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    
-
-}
-
-.searcher
-{
-    display: flex;
-    flex: 1;
-    max-width: 900px;
-    align-items: center;
-    justify-content: center; 
-    
-    
-}
-
-
-.searcher input
-{
-    flex: .7;
-    padding: 10.5px;
-    border: 1px solid black;
-    border-radius: 20px 0 0 20px;
-    background: #f1eeee83;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-}
-
-.searcher button
-{
-    border-radius: 0 20px 20px 0;
-    background: transparent;
-    padding: 3.5px 20px;
-    cursor: pointer;
-    font-size: 20px;
-    background: #f7f5f575;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-}
-
-    /*-cart, -sign in, -contact us*================/
-/*SIGN IN*/
-.signIn
-{position: relative;
-}
-
-#addcartUpdate
-{
-    position: absolute;
-    font-size: 100rem;
-}
-
-.signIn ul
-{
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-}
-
-
-.signIn ul li
-{
-    list-style: none;
-    margin-left: 20px;
-}
-
-.signIn a
-{
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    cursor: pointer;
-    color: #333;
-}
-
-.signIn a:hover
-{
-    color: #8b6b2e;
-}
-.signIn a span
-{
-    color: #333;
-}
-.signIn ul li:hover
-{
-    transform: scale(102%);
-}
-
-/*CATERGORIES*/
-    /*category list*/
-.categories
-{
-    display: flex;
-    margin: 0;
-    justify-content: center;
-    border-top: 1px solid rgba(0,0,0,0.15);
-    padding: 10px 3px;
-    background: rgba(255, 255, 255, 0.445);
-    backdrop-filter: blur(2px);
-}
-
-.categories li
-{
-    list-style: none;
-    margin: 0 14px;
-    border: none;
-}
-
-.categories li:hover
-{
-    transform: scale(103%);
-}
-
-.categories li a
-{
-    text-decoration: none;
-    /*color: rgb(24, 24, 24);*/
-    color: #333;
-    font-weight: 500;
-    padding: 4px;
-}
-
-.categories li a:hover
-{
-    color: #745416;
-    transition: all 0.3s ease;
-    box-shadow: -3px 3px 4px rgba(0, 0, 0, .2);
-    border: 0.001px solid #333;
-}
-
-/*ALL ABOUT FOOTER*/
-.footer
-{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(128, 128, 128, 0.322);
-    height: 40px;
-}
-
-.section4Bottom
-{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: #afae9c27;
-}
-
-.column1
-{
-    display: block;
-    width: 250px;
-    justify-content: justify;
-}
-
-.column1 p
-{
-    text-align: justify;
-    font-size: 14px;
-    letter-spacing: -0.5px;
-}
-
-.aboutPageP
-{
-    margin-top: 15px;
-}
-
-
-.column1 img
-{
-    width:50%;
-    height: auto;
-    margin: 0 60px;
-}
-
-ul li
-{
-    list-style: none;
-}
-
-.row1-7
-{
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-bottom: 30px;
-}
-
-.row3-7
-{
-    margin-top: 20px;
-}
-.row3-7 .shipping
-{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.5px;
-}
-
-.shipping img
-{
-    width: 42px;
-    height: 25px;
-    margin: none;
-}
-
-.cards img
-{
-    width: 60px;
-    height: 30px;
-    display: flex;
-    margin: 5px;
-}
-
-.cards img:hover
-{
-    transform: scale(105%);
-    border: 1px solid grey;
-    transition: 0.1s;
-    border-radius: 3px;
-}
-
-.sub
-{
-    font-size: 14px;
-    text-decoration: none;
-    color: #533c0f;
-}
-
-.sub a
-{
-    color: #533c0f;
-    text-decoration: none; 
-}
-
-.sub a:hover, .Explore:hover
-{
-    color: #d6961f;
-    transition: 0.2s;
-}
-
-.column2, .column3
-{
-    width: 180px;
-}
-
-.column7
-{
-    width: 250px;
-    margin-bottom: 10px;
-}
-
-.column2
-{
-    margin-left: 10px;
-}
-
-
-.socialMedia img
-{
-    width: 12%;
-    height: auto;
-    margin: 5px;
-}
-
-.socialMedia img:hover
-{
-    transform: scale(120%);
-    transition: 0.1s;
-}
-
-.Explore
-{
-    color: #8b6b2e;
-    text-decoration: none;
-}
-
-.section5
-{
-    border: 1px solid #333;
-    border-radius: 8px;
-    width: 35%;
-    margin: 20px auto;
-    align-items: center;
-    justify-content: center;
-}
-.subscribe
-{
-    display: block;
-    padding: 10px;
-    border: 1px solid rgba(155, 151, 151, 0.877);
-    border-radius: 5px;
-    width: 300px;
-}
-
-.subscribe:hover
-{
-    transform: scale(105%);
-    transition: 0.2s ease-in-out;
-}
-
-.subscribe input
-{
-    border-radius: 3px;
-    padding: 3px;
-}
-
-.subscribe button
-{
-    background-color: #8b6b2e;
-    border-radius: 3px;
-    padding: 3px;
-}
-
-.subscribe button:hover
-{
-    cursor: pointer;
-    background-color: #cca04f;
-    color: #333;
-}
-.p1, .subscribe li
-{
-    text-align: justify;
-    font-size: 14px;
-    color: #504f4f;
-    letter-spacing: -0.5px;
-}
-
-.p2
-{
-    text-align: justify;
-    font-size: 12px;
-    color: #6b6b6bea;
-    letter-spacing: -0.5px;
-}   
-
-.shipping img
-{
-    border-radius: 4px;
-}
-.shipping img:hover
-{
-    transform: scale(105%);
-    transition: 0.1s;
-    border: 1px solid grey;
-}
-
 
 
 /*SIGN IN PAGE*/
@@ -442,7 +8,7 @@ ul li
     height: 77vh;
     align-items: center;
     justify-content: center;
-    background-image: url(images/background\ photo.png);
+    background-image: url(../images/background\ photo.png);
     background-size: cover;
     background-position: center;
     
