Added JS functions to SignIn and sign up page, added JS for show and hide password, added HTML form for sign in and sign up

--- a/CSS FOLDER/universal&body.css
+++ b/CSS FOLDER/universal&body.css
@@ -22,7 +22,7 @@ body
     --PAPAYAWHIP: papayawhip;
     --GOLDEN-BROWN: #8b6b2e;
     --DARK-YELLOW:  #9c6b0f; /*for HOVERS*/
-    --MID-YELLOW:  #d4af37;
+    --MID-YELLOW:  #d4af37; /*for active clicks*/
     --MID-YELLOW-2: #ebaa31c9; /*for BUTTONS*/
     --DARK-RED: #e21010e1;
 
