--- a/CSS FOLDER/backtotop.css
+++ b/CSS FOLDER/backtotop.css
@@ -1,30 +1,26 @@
 /*BACK TO TOP*/
+
 .backtotop
 {
     position: fixed;
     right: 5px;
-    bottom: 250px;
+    bottom: 30px;
     width: 40px;
     text-align: center;
-    background-color: rgba(128, 128, 128, 0.336);
+    background-color: rgba(128, 128, 128, 0.26);
     font-size: 13px;
-    border-radius: 7px;
-    padding: 5px;
+    border-radius: 5px;
+    padding: 1px;
+    color: #333;
+    
 }
 
 .backtotop:hover
 {
-    color:#9c6b0f;
-    cursor: pointer;
+    color: #9c6b0f;
 }
 
-.backtotop a
+.backtotop:active
 {
-    text-decoration: none;
-    color: #0e0d0d;
-}
-
-.backtotop a:hover
-{
-    color:#9c6b0f;
+    color: #d4af37;
 }
