Added JS for add to cart, there will be message pop up saying add to cart when the add to cart button is clicked, and also added JS for Cart Badge update, whenever add to cart is clicked, the cart increased its quantity

--- a/CSS FOLDER/header.css
+++ b/CSS FOLDER/header.css
@@ -43,3 +43,17 @@
 {
     margin: 0 8px;
 }
+
+.cartBadge
+{
+    position: absolute;
+    border-radius: 50%;
+    background-color: red;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    padding: 0 5px;
+    font-size: 10px;
+    top: 17px;
+    right: 68px;
+}
