Added trash button beside each item, and synced to the cart details. Added + and - quantity, fixed overflowing layout of cart pop up. created functions for add item, removeitem, and update

--- a/CSS FOLDER/mainPage.css
+++ b/CSS FOLDER/mainPage.css
@@ -87,6 +87,11 @@
     padding: 2px 4px;
 }
 
+#addToCart:hover
+{
+    cursor: pointer;
+}
+
 .viewMore
 {
     display: flex;
@@ -107,4 +112,11 @@
 .bottomCategoryBlock a
 {
     border: 0.01px solid #333;
+}
+
+.trash
+{
+    display: none;
+    color: red;
+    cursor: pointer;
 }
