--- a/CSS FOLDER/header.css
+++ b/CSS FOLDER/header.css
@@ -3,31 +3,38 @@
 
 .headerGroup
 {
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin: 10px;
-    padding: 2px 0;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
 }
 
 .pageLogoBox
 {
-    width: 30%;
+    justify-content: flex-start;
 }
 .inputBarHeader
 {
     text-align: center;
+    width: 0px;
+    flex: 2;
+    display: flex;
+    flex-direction: row;
 }
+
 .inputBarHeader input
 {
-    height: 25px;
-    width: 60%;
     border-radius: 4px;
+    width: 100px;
 }
 
 .pageLogo
 {
-    width: 100%;
+    width: 80px;
+    height: auto;
 }
 
 .fa-magnifying-glass:hover
@@ -37,6 +44,7 @@
 .cart-Log-Call-Group
 {
     display: flex;
+justify-content: flex-end;
 }
 
 .cart-Log-Call-Group div
@@ -44,6 +52,11 @@
     margin: 0 8px;
 }
 
+
+
+
+
+/* CART */
 .cartBadge
 {
     position: absolute;
@@ -54,6 +67,170 @@
     text-align: center;
     padding: 0 5px;
     font-size: 10px;
-    top: 17px;
-    right: 68px;
+    top: -6px;
+    right: -10px;
+}
+
+.cartIcon
+{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.cartSidePopUpPage
+{
+    position: fixed;
+    top: 5%;
+    right: 0;
+    width: 260px;
+    background-color: whitesmoke;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0,0.15);
+    z-index: 2000;
+    padding: 6px;
+    cursor: default;
+    transform: translateX(0);
+    transition: transform 0.2s ease-in, opacity 0.2s ease-in;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+.hideCart
+{
+    transform: translateX(10%);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.cartPageHeader
+{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cartHeaderLabel
+{
+    margin: 50px auto 10px auto;
+
+}
+
+.closeCartPop
+{
+    position: absolute;
+    right: -9px;
+    top: -1px;
+    cursor: pointer;
+    padding: 0 9px;
+    border-radius: 4px;
+    font-size: 23px;
+    background-color: transparent;
+}
+
+.closeCartPop:hover
+{
+    border: 1px solid #ccc;
+    background-color: #ddd;
+    cursor: pointer;
+}
+
+.cartDetails
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cartTotalLabel
+{
+    margin: 0 0 20px 0;
+}
+
+.cartDetails button
+{
+    width: 100%;
+    margin: 10px 0;
+    padding: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color:  #ebaa31c9;
+}
+
+.cartDetails button:hover
+{
+    background-color:  #9c6b0f;
+    color: whitesmoke;
+    transform: scale(105%);
+    transition: 0.1s;
+    cursor: pointer;
+}
+
+.viewSideCartButton:active,
+.checkoutSideCartButton:active,
+.cardPaymentButton:active
+{
+    background-color: #d4af37;
+    color: #1d1c1c;
+    transform: scale(105%);
+    
+
+}
+
+.itemsOnCartDetails
+{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.eachCartImage img
+{
+    width: 60px;
+    height: auto;
+}
+
+.eachCartTextDetails
+{
+    display: flex;
+    flex-direction: column;
+    font-size: 11px;
+}
+
+.sideCartItemPrice
+{
+    margin: 1px 0 5px 0;
+}
+
+.sideCartItemQtyGroup
+{
+    display: flex;
+    margin-top: 15px;
+}
+
+.sideCartItemQtyGroup span
+{
+    margin: 2px 5px 0 -8px;
+}
+
+.sideCartQtyInput
+{
+    width: 40px;
+    padding: 0 4px;
+}
+
+.fa-trash-can
+{
+    margin: 0 8px;
+    font-size: 15px;
+    margin-top: 2px;
+}
+
+.fa-trash-can:hover
+{
+    color: red;
+    cursor: pointer;
 }
