--- a/CSS FOLDER/signIn.css
+++ b/CSS FOLDER/signIn.css
@@ -24,6 +24,12 @@
     position: relative;
     width: 80%;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 
     animation: popIn 0.3s ease-out forwards;
 }
