--- a/CSS FOLDER/signUp.css
+++ b/CSS FOLDER/signUp.css
@@ -7,7 +7,6 @@
     display: none;
     position: fixed;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -153,6 +152,8 @@
 }
 
 
+
+
 @keyframes popIn
 {
     from
@@ -165,5 +166,20 @@
     {
         opacity: 1;
         transform: scale(100%);
+    }
+}
+
+@keyframes popOut
+{
+    from
+    {
+        opacity: 1;
+        transform: scale(100%);
+    }
+
+    to
+    {
+        opacity: 0;
+        transform: scale(0);    
     }
 }
