--- a/CSS FOLDER/categories.css
+++ b/CSS FOLDER/categories.css
@@ -1,18 +1,166 @@
 
 .categories
 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    position: fixed;
+    z-index: 2000;
+    width: 10px;
+    height: 42vh;
     gap: 12px;
+    top: 120px;
+    left: 0px;
     row-gap: 3px;
-    width: 100%;
-    background-color: #dddada80;
+    width: 45%;
+    border-radius: 4px;
+    background-color: #dddddd;
+    padding: 30px 50px 20px 10px;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-in-out;
 }
+
+.eachCategory
+{
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.categories.active
+{
+    transform: translateX(0);
+}
+
 
 .categories a
 {
-    font-size: 12px;
-    
+    font-size: 13px;
+    display: block;
+    text-decoration: underline;
+    padding: 8px;
+}
+
+.categories a:hover
+{
+    color: #9c6b0f;
+}
+
+.fa-xmark
+{
+    position: absolute;
+    right: 5px;
+    top:5px;
+    border: 1px solid #333;
+    padding: 2px 3px;
+    border-radius: 4px;
+    background-color: rgba(177, 177, 177, 0.753);
+    font-size: 8px;
+}
+
+.fa-chevron-right
+{
+    margin-top: 5px;
+}
+
+
+.eachCategorySubStorage,
+.eachCategorySubGlasses,
+.eachCategorySubKnife,
+.eachCategorySubCookwares,
+.eachCategorySubUtensils
+{
+    display: none;  
+}
+
+.eachCategorySubStorage
+{
+    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    z-index:2000;
+    background-color: #dddddd;
+    left: 170px;
+    height: 7vh;
+    padding: 7px;
+    border-radius: 4px;
+    top: 220px;
+    width: 128px;
+    text-decoration: underline;
+}
+
+.eachCategorySubGlasses
+{
+    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    z-index:2000;
+    background-color: #dddddd;
+    left: 170px;
+    height: 11.5vh;
+    padding: 7px;
+    border-radius: 4px;
+    top: 252px;
+    width: 150px;
+    text-decoration: underline;
+}
+
+.eachCategorySubGlasses a,
+.eachCategorySubKnife a,
+.eachCategorySubCookwares a,
+.eachCategorySubUtensils a
+{
+    margin: 2px;
+}
+
+.eachCategorySubKnife
+{
+    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    z-index:2000;
+    background-color: #dddddd;
+    left: 170px;
+    height: 15vh;
+    padding: 7px;
+    border-radius: 4px;
+    top: 340px;
+    width: 128px;
+    text-decoration: underline;
+}
+
+.eachCategorySubCookwares
+{
+    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    z-index:2000;
+    background-color: #dddddd;
+    left: 170px;
+    height: 11.5vh;
+    padding: 7px;
+    border-radius: 4px;
+    top: 370px;
+    width: 128px;
+    text-decoration: underline;
+}
+
+.eachCategorySubUtensils
+{
+    position: fixed;
+    flex-direction: column;
+    position: absolute;
+    z-index:2000;
+    background-color: #dddddd;
+    left: 170px;
+    height: 12vh;
+    padding: 7px;
+    border-radius: 4px;
+    top: 407px;
+    width: 165px;
+    text-decoration: underline;
+}
+
+
+.eachCategory button
+{
+    border: none;
+    background-color: #dddddd;
 }
