--- a/CSS FOLDER/header.css
+++ b/CSS FOLDER/header.css
@@ -3,53 +3,98 @@
 
 .headerGroup
 {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
     align-items: center;
-    padding: 10px;
     width: 100%;
+    padding: 10px;
+}
+
+.headerGroup div
+{
+    padding: 1px 10px;
 }
 
 .pageLogoBox
 {
-    justify-content: flex-start;
+width: 110px;
+margin-left: -10px;
 }
+
+
 .inputBarHeader
 {
-    text-align: center;
-    width: 0px;
-    flex: 2;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: auto;
+    margin: 0 0 5px 0;
+    flex-grow: 1;
+    padding: 2px;
 }
 
 .inputBarHeader input
 {
-    border-radius: 4px;
-    width: 100px;
+    border-radius: 4px 0 0 4px;
+    border: 1px solid #ddd;
+    width: 85%;
+    height: 35px;
 }
 
 .pageLogo
 {
-    width: 80px;
+    width: 90%;
     height: auto;
+    margin-left: -15px;
+}
+
+.fa-magnifying-glass
+{
+    background-color: #ccc;
+    margin: 8px 8px 8px 0;
+    padding: 9px;
+    border-radius: 0 4px 4px 0;
 }
 
 .fa-magnifying-glass:hover
 {
     cursor: pointer;
 }
+
+
 .cart-Log-Call-Group
 {
     display: flex;
-justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    
+
 }
 
 .cart-Log-Call-Group div
 {
-    margin: 0 8px;
+    padding: 0 20px;
+    font-size: 20px;
+}
+
+.burgerIcon
+{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+.burgerLine
+{
+    border: 1px solid #333;
+    margin-bottom: 5px;
+    width: 30px;
+    border-radius: 20px;
+    background-color: #333;
+
 }
 
 
@@ -65,10 +110,10 @@ justify-content: flex-end;
     font-weight: 700;
     color: white;
     text-align: center;
-    padding: 0 5px;
-    font-size: 10px;
-    top: -6px;
-    right: -10px;
+    padding: 1px 8px;
+    font-size: 13px;
+    top: -5px;
+    right: 2px;
 }
 
 .cartIcon
@@ -83,18 +128,19 @@ justify-content: flex-end;
     position: fixed;
     top: 5%;
     right: 0;
-    width: 260px;
+    width: 70%;
     background-color: whitesmoke;
     border: 1px solid #ddd;
     border-radius: 6px;
     box-shadow: 0px 8px 20px rgba(0, 0, 0,0.15);
     z-index: 2000;
-    padding: 6px;
+    padding: 2px;
     cursor: default;
     transform: translateX(0);
     transition: transform 0.2s ease-in, opacity 0.2s ease-in;
     max-height: 80vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .hideCart
@@ -115,7 +161,7 @@ justify-content: flex-end;
 .cartHeaderLabel
 {
     margin: 50px auto 10px auto;
-
+    font-size: 14px;
 }
 
 .closeCartPop
@@ -148,6 +194,7 @@ justify-content: flex-end;
 .cartTotalLabel
 {
     margin: 0 0 20px 0;
+    font-size: 15px;
 }
 
 .cartDetails button
@@ -222,8 +269,9 @@ justify-content: flex-end;
     padding: 0 4px;
 }
 
-.fa-trash-can
+.eachTrash
 {
+    visibility: hidden;
     margin: 0 8px;
     font-size: 15px;
     margin-top: 2px;
