--- a/CSS FOLDER/mainPage.css
+++ b/CSS FOLDER/mainPage.css
@@ -35,7 +35,7 @@
     left: 35px;
 }
 
-#shopNowButton
+.shopNowButton
 {
     position: absolute;
     top:70%;
@@ -82,12 +82,12 @@
     font-weight: 700;
 }
 
-#addToCart
+.addToCart
 {
     padding: 2px 4px;
 }
 
-#addToCart:hover
+.addToCart:hover
 {
     cursor: pointer;
 }
@@ -112,11 +112,4 @@
 .bottomCategoryBlock a
 {
     border: 0.01px solid #333;
-}
-
-.trash
-{
-    display: none;
-    color: red;
-    cursor: pointer;
 }
