Updated each Add to Cart and Delete Button with JS

--- a/CSS FOLDER/mainPage.css
+++ b/CSS FOLDER/mainPage.css
@@ -113,3 +113,22 @@
 {
     border: 0.01px solid #333;
 }
+
+.addandTrashSection
+{
+    position: relative;
+}
+
+.fa-trash-can
+{
+    visibility: hidden;
+    position: absolute;
+    right: -30px;
+    top: 3px;
+
+}
+
+.fa-trash-can:hover
+{
+    color: red;
+}
