--- a/CSS FOLDER/signUp.css
+++ b/CSS FOLDER/signUp.css
@@ -33,6 +33,35 @@
     text-align: center;
 }
 
+.firstPasswordWrapper,
+.secondPasswordWrapper
+{
+    position: relative;
+}
+
+.firstPasswordWrapper input,
+.secondPasswordWrapper input
+{
+    width: 100%;
+    padding: 10px;
+    padding-right: 40px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.firstPasswordWrapper i,
+.secondPasswordWrapper i
+{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+
+
+
+
 .emailLabelGroup, .passwordLabelGroup, .passwordLabelGroupRepeat
 {
     display: flex;
@@ -123,28 +152,18 @@
 {
     font-size: 10px;
 }
-.firstEye
-{
-    position: absolute;
-    font-size: 18px;
-    top: 39%;
-    right: 33px;
-    cursor: pointer;
-}
-
+.firstEye,
 .secondEye
 {
     position: absolute;
     font-size: 18px;
-    top: 57.5%;
-    right: 33px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
     cursor: pointer;
 }
 
-.fa-eye:hover
-{
-    color:  #9c9a0f;
-}
+
 
 .fa-eye:active
 {
@@ -152,34 +171,3 @@
 }
 
 
-
-
-@keyframes popIn
-{
-    from
-    {
-        opacity: 0;
-        transform: scale(70%);
-    }
-
-    to
-    {
-        opacity: 1;
-        transform: scale(100%);
-    }
-}
-
-@keyframes popOut
-{
-    from
-    {
-        opacity: 1;
-        transform: scale(100%);
-    }
-
-    to
-    {
-        opacity: 0;
-        transform: scale(0);    
-    }
-}
